[build-system]
requires = [
  "setuptools",
  "setuptools-scm[toml]",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-mock"
description = "Thin-wrapper around the mock package for easier use with pytest"
authors = [
    {name = "Bruno Oliveira", email = "nicoddemus@gmail.com"},
]
dependencies = [
    "pytest>=6.2.5",
]
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "MIT"}
keywords = ["pytest", "mock"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/pytest-dev/pytest-mock/"
Documentation = "https://pytest-mock.readthedocs.io/en/latest/"
Changelog = "https://pytest-mock.readthedocs.io/en/latest/changelog.html"
Source = "https://github.com/pytest-dev/pytest-mock/"
Tracker = "https://github.com/pytest-dev/pytest-mock/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-asyncio",
    "tox",
]

[project.entry-points.pytest11]
pytest_mock = "pytest_mock"

[tool.setuptools.package-data]
pytest_mock = ["py.typed"]

[tool.setuptools_scm]
write_to = "src/pytest_mock/_version.py"

[tool.ruff.lint]
extend-select = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-third-party = ["src"]
